k8s/chapitre6_OK/solidinvoice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: solidinvoice-deployment
 namespace: k8slive
 labels:
   app: solidinvoice
spec:
 replicas: 2
 selector:
   matchLabels:
     app: solidinvoice
 template:
   metadata:
     labels:
       app: solidinvoice
   spec:
     containers:
     - name: solidinvoice
       image: solidinvoice/solidinvoice:2.1.2
       ports:
       - containerPort: 80
       resources:
         requests:
           memory: "100Mi"
           cpu: "250m"
         limits:
           memory: "200Mi"
           cpu: "500m"
