k8s/chapitre6_OK/mariadb-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-svc
  namespace: k8slive
spec:
  selector:
    app: mariadb
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
