k8s/chapitre6_OK/solidinvoice-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: solidinvoice-svc
  namespace: k8slive
spec:
  selector:
    app: solidinvoice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
