k8s/chapitre6_OK/solidinvoice-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: k8slive
  name: solidinvoice-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: k8slive.solidinvoice.zerofiltre.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solidinvoice-svc
            port:
              number: 80
  tls: 
  - hosts:
    - k8slive.solidinvoice.zerofiltre.tech
    secretName: k8slive-solidinvoice-zerofiltre-ingress-cert
